# git-suggestion

./: CHANGELOG  Cargo.toml  Makefile  README.md  TODO
doc/: git-sugapply.1  git-sugapply.1.txt  git-sugdiff.1  git-sugdiff.1.txt  git-sugpatch.1  git-sugpatch.1.txt
github-suggestion/: Cargo.toml
github-suggestion-cli/: Cargo.toml
github-suggestion-config/: Cargo.toml
github-suggestion-config/src/: lib.rs
github-suggestion/src/: client.rs  color.rs  lib.rs  suggestion.rs  url.rs
src/: arg.rs  client.rs  config.rs  diff_options.rs  error.rs  lib.rs  owner_repo.rs  suggestion.rs  url.rs
