[package]
name = "git-suggestion"
version = "0.2.1"
edition = "2018"

[dependencies]
exitcode = "1.1.2"
getopts = "0.2.21"
git2 = { version = "0.13.11", features = ["vendored-openssl"] }
regex = "1.3.9"
thiserror = "1.0.20"
url = "2.1.1"

github-suggestion = { path = "github-suggestion" }

[workspace]
members = [
	"github-suggestion",
]
