[package]
name = "github-suggestion"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
colorparse = "2.0.1"
git2 = "0.13.8"
github-rs = "0.7.0"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tempfile = "3.1.0"
thiserror = "1.0.20"
url = "2.1.1"
